Pending reports graph with ajax load

--- a/stats/templates/stats/workload.html
+++ b/stats/templates/stats/workload.html
@@ -34,12 +34,6 @@
   <body>
 
   <div class="row solid-border">
-    <div id="container_pending" class="col-md-6" style="height: 400px; margin: 0 auto"></div>
-    <div class="col-md-2 solid-border">
-        <p><strong>Currently working in</strong></p>
-    </div>
-  </div>
-  <div class="row solid-border">
     <div id="container" class="col-md-6" style="height: 400px; margin: 0 auto"></div>
     <div class="col-md-2 solid-border">
         <p><strong>Select experts</strong></p>
@@ -52,6 +46,15 @@
     <div class="col-md-2 solid-border">
         <p><strong>Daily report input</strong></p>
         <p>This graph shows how many reports enter the system at a given date, by creation date of the report.</p>
+    </div>
+  </div>
+  <div class="row solid-border">
+    <div id="container_pending" class="col-md-6" style="height: 400px; margin: 0 auto"></div>
+    <div class="col-md-2 solid-border">
+        <p><strong>Currently working in</strong></p>
+        <p><strong>Select experts</strong></p>
+        <ul id="userlist_pending" class="list-group">
+        </ul>
     </div>
   </div>
 
