Before refactoring data load

--- a/stats/templates/stats/workload.html
+++ b/stats/templates/stats/workload.html
@@ -35,19 +35,17 @@
   <body>
 
   <div class="row solid-border">
+    <div class="col-md-6">
+    <p><strong>Expert selection</strong></p>
+    <ul id="userlist" class="list-group">
+    </ul>
+    </div>
+  </div>
+  <div class="row solid-border">
     <div id="container" class="col-md-6" style="height: 400px; margin: 0 auto"></div>
     <div class="col-md-2 solid-border">
         <p><strong>Select experts</strong></p>
         <p>This graph shows the number of reports that a given expert validated at a certain point in time.</p>
-        <ul id="userlist" class="list-group">
-        </ul>
-    </div>
-  </div>
-  <div class="row solid-border">
-    <div id="container_two" class="col-md-6" style="height: 400px; margin: 0 auto"></div>
-    <div class="col-md-2 solid-border">
-        <p><strong>Daily report input</strong></p>
-        <p>This graph shows how many reports enter the system at a given date, by creation date of the report.</p>
     </div>
   </div>
   <div class="row solid-border">
@@ -55,8 +53,13 @@
     <div class="col-md-2 solid-border">
         <p><strong>Select experts</strong></p>
         <p>This graph shows how many reports currently are in the queue of an expert. The number of reports is between 0 and 5.</p>
-        <ul id="userlist_pending" class="list-group">
-        </ul>
+    </div>
+  </div>
+  <div class="row solid-border">
+    <div id="container_two" class="col-md-6" style="height: 400px; margin: 0 auto"></div>
+    <div class="col-md-2 solid-border">
+        <p><strong>Daily report input</strong></p>
+        <p>This graph shows how many reports enter the system at a given date, by creation date of the report.</p>
     </div>
   </div>
   <div class="row solid-border">
