Tweaks to pending reports per expert graph

--- a/stats/templates/stats/workload.html
+++ b/stats/templates/stats/workload.html
@@ -66,7 +66,7 @@
         <div id="container_pending" class="col-md-6" style="height: 475px; margin: 0 auto"></div>
         <div class="col-md-2 solid-border">
             <p><strong>Pending reports per expert</strong></p>
-            <p>This graph shows how many reports currently are in the queue of an expert. The number of reports is between 0 and 5.</p>
+            <p>This graph shows how many reports currently are in the queue of an expert. The number of reports is between 0 and 5. The date between parentheses indicates the most recent activity by the user (i.e: the most recent time she/he validated a report)</p>
             <p><strong>Select experts</strong></p>
             <ul id="userlist_pending" class="list-group">
             </ul>
