--- a/stats/static/stats/workload.css
+++ b/stats/static/stats/workload.css
@@ -5,7 +5,7 @@
     padding: 5px 10px;
 }
 
-.list-group {
+.list-group.users {
     -moz-column-count: 2;
     -moz-column-gap: 10px;
     -webkit-column-count: 2;
