--- a/stats/templates/stats/workload.html
+++ b/stats/templates/stats/workload.html
@@ -29,6 +29,10 @@
             users[i].color = expert_color[i];
             user_data[users[i].username] = users[i];
         }
+        var load_on_start = false;
+        {% if load_everything_on_start %}
+            load_on_start = true;
+        {% endif %}
     </script>
     <script src={% static "stats/workload.js" %}></script>
   </head>
@@ -58,18 +62,28 @@
             <p><strong>Expert activity</strong></p>
             <p>This graph shows the number of reports that a given expert validated at a certain point in time.</p>
             <p><strong>Select experts</strong></p>
-            <ul id="userlist" class="list-group">
+            <ul id="userlist" class="list-group users">
             </ul>
         </div>
       </div>
       <div class="row solid-border">
-        <div id="container_pending" class="col-md-6" style="height: 475px; margin: 0 auto"></div>
-        <div class="col-md-2 solid-border">
-            <p><strong>Pending reports per expert</strong></p>
-            <p>This graph shows how many reports currently are in the queue of an expert. The number of reports is between 0 and 5. The date between parentheses indicates the most recent activity by the user (i.e: the most recent time she/he validated a report)</p>
-            <p><strong>Select experts</strong></p>
-            <ul id="userlist_pending" class="list-group">
-            </ul>
+        <div class="row">
+            <div id="container_pending" class="col-md-6" style="height: 475px; margin: 0 auto"></div>
+            <div class="col-md-2 solid-border">
+                <p><strong>Pending reports per expert</strong></p>
+                <p>This graph shows how many reports currently are in the queue of an expert. The number of reports is between 0 and 5. The date between parentheses indicates the most recent activity by the user (i.e: the most recent time she/he validated a report)</p>
+                <p><strong>Pending reports detail</strong></p>
+                <p>This list shows all the users that have one or more pending reports, plus a link to all these pending reports in Monitor->Report. The report list shows as label the ID of the report, followed by the creation date of the report.</p>
+                <p><strong>Select experts</strong></p>
+                <ul id="userlist_pending" class="list-group users">
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <p><strong>Pending reports detail</strong></p>
+                <ul id="pending_detail"></ul>
+            </div>
         </div>
       </div>
       <div class="row solid-border">
@@ -80,13 +94,16 @@
         </div>
       </div>
       <div class="row solid-border">
-        <div id="container_gauge" class="col-md-3" style="height: 200px; margin: 0 auto"></div>
-        <div id="pending_gauge" class="col-md-3" style="height: 200px; margin: 0 auto"></div>
+        <div id="container_gauge" class="col-md-2" style="height: 200px; margin: 0 auto"></div>
+        <div id="pending_gauge" class="col-md-2" style="height: 200px; margin: 0 auto"></div>
+        <div id="container_overall_pending" class="col-md-2" style="height: 200px; margin: 0 auto"></div>
         <div class="col-md-2 solid-border">
             <p><strong>Unassigned reports</strong></p>
             <p>Unassigned reports are reports that have not been yet assigned to any user. Reports which are hidden or missing pictures are not included in this count.</p>
             <p><strong>Reports in progress</strong></p>
             <p>Reports in progress are reports which have not yet been assigned to at least 3 experts. Therefore, they are considered work in progress. This count exludes unassigned reports.</p>
+            <p><strong>Overall pending reports</strong></p>
+            <p>This is the total pending (assigned but not yet validated) reports of all users. This number should be equal to the sum of all the pending reports in the 'Pending reports per expert' graph.</p>
         </div>
       </div>
   </div>
