--- a/tigacrafting/templates/tigacrafting/validation_message_template.html
+++ b/tigacrafting/templates/tigacrafting/validation_message_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     {% block title_block %}
         <title></title>
     {% endblock %}
