Working first version of notifications sent by user level

--- a/tigacrafting/static/tigacrafting/tigacrafting_style.css
+++ b/tigacrafting/static/tigacrafting/tigacrafting_style.css
@@ -129,3 +129,13 @@ input[type=checkbox]
 .label-margin{
     margin-right: 5px;
 }
+
+ul {
+ list-style: none;
+}
+
+.separator_line{
+    border-bottom: 1px solid #ddd;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
