Fixed encoding errors in message to user templates ca and es

--- a/tigacrafting/templates/tigacrafting/validation_message_template_ca.html
+++ b/tigacrafting/templates/tigacrafting/validation_message_template_ca.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block validation_category_block %}
-    <p><strong>La teva observació correspon a:</strong> {{ validation_category }}</p>
+    <p><strong>La teva observaci&#243; correspon a:</strong> {{ validation_category }}</p>
 {% endblock %}
 
 {% block map_link_block %}
