--- a/tigacrafting/templates/tigacrafting/validation_message_template_es.html
+++ b/tigacrafting/templates/tigacrafting/validation_message_template_es.html
@@ -1,19 +1,19 @@
 {% extends "tigacrafting/validation_message_template.html" %}
 
 {% block title_block %}
-    <title>¡Tu foto ha sido validada por un experto!</title>
+    <title>&#161;Tu foto ha sido validada por un experto!</title>
 {% endblock %}
 
 {% block title_header_block %}
-    <h1>¡Tu foto ha sido validada por un experto!</h1>
+    <h1>&#161;Tu foto ha sido validada por un experto!</h1>
 {% endblock %}
 
 {% block validation_category_block %}
-    <p><strong>Tu observación corresponde a:</strong> {{ validation_category }}</p>
+    <p><strong>Tu observaci&#243;n corresponde a:</strong> {{ validation_category }}</p>
 {% endblock %}
 
 {% block map_link_block %}
-    <p><a href="{{ map_link }}" target="_blank">Míralo en el mapa</a></p>
+    <p><a href="{{ map_link }}" target="_blank">M&#237;ralo en el mapa</a></p>
 {% endblock %}
 
 {% block expert_note_block %}
