Disabled map link on notification to user until fixed

--- a/tigacrafting/templates/tigacrafting/validation_message_template_ca.html
+++ b/tigacrafting/templates/tigacrafting/validation_message_template_ca.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block map_link_block %}
-    <p><a href="{{ map_link }}" target="_blank">Mira-ho al mapa</a></p>
+    <!--<p><a href="{{ map_link }}" target="_blank">Mira-ho al mapa</a></p>-->
 {% endblock %}
 
 {% block expert_note_block %}
