--- a/tigacrafting/templates/tigacrafting/validation_message_template_en.html
+++ b/tigacrafting/templates/tigacrafting/validation_message_template_en.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block map_link_block %}
-    <p><a href="{{ map_link }}" target="_blank">View it on the map</a></p>
+    <!--<p><a href="{{ map_link }}" target="_blank">View it on the map</a></p>-->
 {% endblock %}
 
 {% block expert_note_block %}
