Added lokimica logo to abouts

--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -25,5 +25,9 @@
     <p class='centeredImage'>
         <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/logo_financ.jpg" %}">
     </p>
+    <p>Con el patrocinio de:</p>
+    <p class='centeredImage'>
+        <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/lokimicagran.jpg" %}">
+    </p>
 
 {% endblock %}
