--- a/tigahelp/templates/tigahelp/about_ca.html
+++ b/tigahelp/templates/tigahelp/about_ca.html
@@ -25,5 +25,9 @@
     <p class="centeredImage">
         <img style="max-width: 100%; height: auto;" src="{% static "tigahelp/logo_financ.jpg" %}">
     </p>
+    <p>Amb el patrocini de:</p>
+    <p class='centeredImage'>
+        <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/lokimicagran.jpg" %}">
+    </p>
 
 {% endblock %}
