--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -25,6 +25,10 @@
     <p class='centeredImage'>
         <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/logo_financ.jpg" %}">
     </p>
+    <p>Sponsored by:</p>
+    <p class='centeredImage'>
+        <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/lokimicagran.jpg" %}">
+    </p>
 
 
 {% endblock %}
