--- a/stats/templates/stats/users.html
+++ b/stats/templates/stats/users.html
@@ -11,11 +11,22 @@
         <link rel="stylesheet" href={% static "stats/workload.css" %}>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="http://code.highcharts.com/maps/highmaps.js"></script>
+        <script src={% static "stats/underscore-min.js" %}></script>
+        <script src={% static "stats/geojson_ccaa.js" %}></script>
         <script src={% static "stats/users.js" %}></script>
         <script>
+            /*
             var reports_data_adults = JSON.parse('{{ data_adults | escapejs }}');;
             var reports_data_sites = JSON.parse('{{ data_sites | escapejs }}');;
+            */
+            var reports_data = JSON.parse('{{ data | escapejs }}');
+            var data_ccaa = JSON.parse('{{ data_ccaa | escapejs }}');
+            var year_list = [];
+            {% for year in years %}
+            year_list.push({{year}});
+            {% endfor %}
         </script>
     </head>
     <div class="navbar-wrapper">
@@ -38,16 +49,62 @@
     </div>
     <body>
         <div class="container-custom">
-            <div id="2014" class="col-md-3" style="height: 300px; margin: 0 auto"></div>
-            <div id="2015" class="col-md-3" style="height: 300px; margin: 0 auto"></div>
-            <div id="2016" class="col-md-3" style="height: 300px; margin: 0 auto"></div>
-            <div id="2017" class="col-md-3" style="height: 300px; margin: 0 auto"></div>
+            <!--<div class="row">
+                <div id="2014" class="col-md-8" style="height: 400px; margin: 0 auto"></div>
+                <div class="col-md-2 solid-border">
+                    <p><strong>Sumari</strong></p>
+                    <ul id="2014_a_l"></ul>
+                </div>
+            </div>
+            <div class="row">
+                <div id="2015" class="col-md-8" style="height: 400px; margin: 0 auto"></div>
+            </div>
+            <div class="row">
+                <div id="2016" class="col-md-8" style="height: 400px; margin: 0 auto"></div>
+            </div>
+            <div class="row">
+                <div id="2017" class="col-md-8" style="height: 400px; margin: 0 auto"></div>
+            </div>-->
+            {% for year in years %}
+            <div class="row">
+                <div id="{{ year }}" class="col-md-8" style="height: 400px; margin: 0 auto"></div>
+                <div class="col-md-2 solid-border">
+                    <!--<ul id="{{ year }}_a_l"></ul>-->
+                    <table id="{{ year }}_a_l"></table>
+                </div>
+            </div>
+            {% endfor %}
+            <div class="row">
+                <div id="acum_a" class="col-md-8" style="height: 400px; margin: 0 auto"></div>
+                <div class="col-md-2 solid-border">
+                    <table id="acum_a_l"></table>
+                </div>
+            </div>
         </div>
         <div class="container-custom">
-            <div id="2014_s" class="col-md-3" style="height: 300px; margin: 0 auto"></div>
-            <div id="2015_s" class="col-md-3" style="height: 300px; margin: 0 auto"></div>
-            <div id="2016_s" class="col-md-3" style="height: 300px; margin: 0 auto"></div>
-            <div id="2017_s" class="col-md-3" style="height: 300px; margin: 0 auto"></div>
+            {% for year in years %}
+            <div class="row">
+                <div id="{{ year }}_s" class="col-md-8" style="height: 400px; margin: 0 auto"></div>
+                <div class="col-md-2 solid-border">
+                    <!--<ul id="{{ year }}_s_l"></ul>-->
+                    <table id="{{ year }}_s_l"></table>
+                </div>
+            </div>
+            {% endfor %}
+            <div class="row">
+                <div id="acum_s" class="col-md-8" style="height: 400px; margin: 0 auto"></div>
+                <div class="col-md-2 solid-border">
+                    <table id="acum_s_l"></table>
+                </div>
+            </div>
+            <!--<div class="row">
+                <div id="2014_s" class="col-md-6" style="height: 300px; margin: 0 auto"></div>
+                <div id="2015_s" class="col-md-6" style="height: 300px; margin: 0 auto"></div>
+            </div>
+            <div class="row">
+                <div id="2016_s" class="col-md-6" style="height: 300px; margin: 0 auto"></div>
+                <div id="2017_s" class="col-md-6" style="height: 300px; margin: 0 auto"></div>
+            </div>-->
         </div>
     </body>
 </html>
