--- a/stats/templates/stats/report_stats_ccaa_pie.html
+++ b/stats/templates/stats/report_stats_ccaa_pie.html
@@ -19,23 +19,39 @@
         <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
         <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
         <script src="https://code.highcharts.com/mapdata/countries/es/es-all.js"></script>
+        <script src="https://unpkg.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
 
         <script src={% static "stats/underscore-min.js" %}></script>
-        <!--<script src={% static "stats/geojson_ccaa.js" %}></script>-->
         <script src={% static "stats/report_stats_ccaa_pie.js" %}></script>
         <script>
             var map_data = JSON.parse('{{ map_data | escapejs }}');
+            var map_data_year = JSON.parse('{{ map_data_year | escapejs }}');
         </script>
         <style>
-            #container {
+            .map-container {
                 min-width: 320px;
                 max-width: 800px;
                 height: 800px;
                 margin: 1em auto;
             }
+
+            .grid-item {
+                float: left;
+                width: 600px;
+                height: 600px;
+                background: #e6e5e4;
+                border: 1px solid #b6b5b4;
+            }
         </style>
     </head>
     <body>
-        <div id="container"></div>
+        <div class="grid">
+            <div class="grid-item" id="container_2014"></div>
+            <div class="grid-item" id="container_2015"></div>
+            <div class="grid-item" id="container_2016"></div>
+            <div class="grid-item" id="container_2017"></div>
+            <div class="grid-item" id="container_2018"></div>
+            <div class="grid-item" id="container_acum"></div>
+        </div>
     </body>
 </html>
