--- a/stats/templates/stats/report_stats_ccaa_pie.html
+++ b/stats/templates/stats/report_stats_ccaa_pie.html
@@ -26,6 +26,7 @@
         <script>
             var map_data = JSON.parse('{{ map_data | escapejs }}');
             var map_data_year = JSON.parse('{{ map_data_year | escapejs }}');
+            var years_data = JSON.parse('{{ years | escapejs }}');
         </script>
         <style>
             .map-container {
@@ -45,6 +46,15 @@
         </style>
     </head>
     <body>
+        <div class="container">
+            <h3>Això està molt buit... selecciona alguns anys per veure dades!</h3>
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="list-inline" id="years">
+                    </ul>
+                </div>
+            </div>
+        </div>
         <div class="grid">
             <div class="grid-item" id="container_2014"></div>
             <div class="grid-item" id="container_2015"></div>
