--- a/stats/templates/stats/mosquito_ccaa_rich.html
+++ b/stats/templates/stats/mosquito_ccaa_rich.html
@@ -1,40 +1,5 @@
 {% load staticfiles %}
 {% load i18n %}
-<!--<html>
-    <head>
-        <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-        <title>MosquitoAlert Stats</title>
-
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
-        <link rel="stylesheet" href={% static "stats/workload.css" %}>
-
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.15/proj4.js"></script>
-        <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/maps/modules/map.js"></script>
-        <script src="https://code.highcharts.com/maps/modules/data.js"></script>
-        <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
-        <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
-        <script src="https://code.highcharts.com/mapdata/countries/es/es-all.js"></script>
-
-        <script src={% static "stats/underscore-min.js" %}></script>
-        <script src={% static "stats/mosquito_ccaa_rich.js" %}></script>
-        <script>
-
-        </script>
-        <style>
-
-        </style>
-    </head>
-    <body>
-        <div class="grid">
-            <div id="container"></div>
-        </div>
-    </body>
-</html>-->
 <html>
     <head>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
@@ -51,44 +16,26 @@
         <script src={% static "stats/mosquito_ccaa_rich.js" %}></script>
         <script>
             var map_data = JSON.parse('{{ map_data | escapejs }}');
-            var all_data = JSON.parse('{{ all_data | escapejs }}');
             var years = JSON.parse('{{ years | escapejs }}');
+            var title_linechart = "{{ title_linechart }}";
+            var title = "{{ title }}";
+            var series_title = "{{ series_title }}";
         </script>
         <style>
-            #country-chart {
-                height: 500px;
-                width: 300px;
+            .subheader{
+                margin-top: 50px;
             }
-            #container {
-                float: left;
-                height: 500px;
-                width: 900px;
-                margin: 0;
-            }
-            #info {
-                float: left;
-                width: 270px;
-                padding-left: 20px;
-                margin: 100px 0 0 0;
-                border-left: 1px solid silver;
-            }
-            #info h2 {
-                display: inline;
-                font-size: 13pt;
-            }
-
-            #info h4 {
-                margin: 1em 0 0 0;
-            }
-
         </style>
     </head>
     <body>
-        <div id="container"></div>
-        <div id="info">
-            <h2></h2>
-            <div class="subheader">Fes clic a les províncies per veure l'històric d'observacions</div>
-            <div id="country-chart"></div>
+        <div class="row">
+            <div class="col-md-8">
+                <div id="container"></div>
+            </div>
+            <div id="info" class="col-md-4">
+                <div class="subheader">Fes clic a les províncies per veure l'històric d'observacions</div>
+                <div id="country-chart"></div>
+            </div>
         </div>
     </body>
 </html>
