--- a/stats/templates/stats/report_stats_ccaa_pie.html
+++ b/stats/templates/stats/report_stats_ccaa_pie.html
@@ -19,7 +19,7 @@
         <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
         <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
         <script src="https://code.highcharts.com/mapdata/countries/es/es-all.js"></script>
-        <script src="https://unpkg.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
+        <script src={% static "stats/isotope.pkgd.min.js" %}></script>
 
         <script src={% static "stats/underscore-min.js" %}></script>
         <script src={% static "stats/report_stats_ccaa_pie.js" %}></script>
